# Clumppling

./: .gitignore  MANIFEST.in  README.md  online_notebook_for_clumppling.ipynb  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml  tests.yml
clumppling/: __main__.py  comm_struc.py  core.py  custom_funcs.py  diffInd.py  diffLoci.py  diffModel.py  func_main.py  func_plotting.py  func_utils.py  funcs.py  log_config.py  main.py  params.py  plot.py  utils.py
clumppling-env/: pyvenv.cfg
clumppling-env/Scripts/: activate  activate.bat
clumppling/alignAcrossK/: __init__.py  __main__.py  utils.py
clumppling/alignWithinK/: __init__.py  __main__.py  utils.py
clumppling/compModels/: __init__.py  __main__.py  utils.py
clumppling/detectMode/: __init__.py  __main__.py  custom.py  utils.py
clumppling/files/: default_colors.txt  default_params.json  distruct_colors.txt
clumppling/parseInput/: __init__.py  __main__.py  utils.py
example_figures/: capeverde_alignment_pattern_graph.tiff
examples/: README.md  align_1kG.sh  align_capeverde.sh  align_chicken.sh  capeverde_ind_labels.txt  custom_colors.txt  plot_submodules.py  plot_unaligned_runs.py  run_comp_models.sh  run_submodules.sh
input/capeverde_admixtureQ/: CAPEVERDE_Rep1.2.Q  CAPEVERDE_Rep1.3.Q  CAPEVERDE_Rep1.4.Q  CAPEVERDE_Rep1.5.Q  CAPEVERDE_Rep10.2.Q  CAPEVERDE_Rep10.3.Q  CAPEVERDE_Rep10.4.Q  CAPEVERDE_Rep10.5.Q  CAPEVERDE_Rep11.2.Q  CAPEVERDE_Rep11.3.Q  CAPEVERDE_Rep11.4.Q  CAPEVERDE_Rep11.5.Q  CAPEVERDE_Rep12.2.Q  CAPEVERDE_Rep12.3.Q  CAPEVERDE_Rep12.4.Q  CAPEVERDE_Rep12.5.Q  CAPEVERDE_Rep13.2.Q  CAPEVERDE_Rep13.3.Q  CAPEVERDE_Rep13.4.Q  CAPEVERDE_Rep13.5.Q  CAPEVERDE_Rep14.2.Q  CAPEVERDE_Rep14.3.Q  CAPEVERDE_Rep14.4.Q  CAPEVERDE_Rep14.5.Q  CAPEVERDE_Rep15.2.Q  CAPEVERDE_Rep15.3.Q  CAPEVERDE_Rep15.4.Q  CAPEVERDE_Rep15.5.Q  CAPEVERDE_Rep16.2.Q  CAPEVERDE_Rep16.3.Q  (+166 more)
scripts/: default_params.json  default_params_diff.json  diff_inds.sh  diff_inds_color.sh  diff_models.sh  diff_models_color.sh  diversity.sh  ex1.sh  ex1_admixtureQ.sh  ex1_brief.sh  ex1_color.sh  ex1_customcd.sh  ex1_customcolor.sh  ex1_default.sh  ex1_direct_avg.sh  ex1_direct_rep.sh  ex1_merge_avg.sh  ex1_merge_rep.sh  ex1_novis.sh  ex2.sh  ex2_brief.sh  ex2_customcolor.sh  ex2_default.sh  ex2_direct_avg.sh  ex2_direct_rep.sh  ex2_merge_avg.sh  ex2_merge_rep.sh  ex2_novis.sh  ex3.sh  ex4.sh  ex5.sh  ex5_diffModel.sh  params.xml  params_coarser.xml  params_custom_cd.xml  params_diffModel.json  params_lc_ada.xml  params_lc_fix.xml  params_merge.xml  params_time.xml  (+19 more)
tests/: test_cvxpy_compatibility.py  test_examples.py  test_louvain_seed.py  test_matplotlib_compatibility.py
