[tool.poetry]
name = "clumppling"
version = "0.2.0"
description = "Clumppling: cluster matching and permutation program with integer linear programming"
authors = ["Xiran Liu <xiranliu@stanford.edu>"]
license = "MIT License"
readme = "README.md"
keywords = ["alignment", "clustering"]
classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.7"
networkx = "<3.0"
numpy = "1.24"
scipy = "1.10"
pandas = "^2.0"
python_louvain = "0.16"
cvxpy = { version = "1.3.1", extras = ["GLPK"] }
TracyWidom = "0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"