[tool.poetry]
name = "clumppling"
version = "1.0.0"
description = "Clumppling: cluster matching and permutation program with integer linear programming"
authors = ["Xiran Liu <xiranliu@stanford.edu>"]
license = "MIT License"
readme = "README.md"
keywords = ["alignment", "clustering"]
classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3"]
include = [
    { path = "clumppling/files/default_colors.txt", format = "wheel"},
    { path = "clumppling/files/", format = "wheel"}
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = "^3.7"
numpy = "^1.24"
TracyWidom = "0.4.0"
scipy = "^1.10"
cvxpy = { version = "1.5", extras = ["GLPK"] }
cdlib = "^0.3"
networkx = "^3.0"

[tool.poetry.scripts]
parseInput = "clumppling.parseInput.__main__:main"
alignWithinK = "clumppling.alignWithinK.__main__:main"
detectMode = "clumppling.detectMode.__main__:main"
alignAcrossK = "clumppling.alignAcrossK.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
