[metadata]
name = clumppling
version = 0.1.0
author = Xiran Liu
author_email = xiranliu@stanford.edu
url = https://github.com/PopGenClustering/Clumppling
description = Clumppling: a new method for aligning multiple clustering results of population structure analysis
long_description = file: README.md
long_description_content_type = text/markdown
keywords = alignment, clustering
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    matplotlib
    networkx
    numpy
    scipy
    pandas
    python_louvain >= 0.16
    cvxpy
    TracyWidom

[options.package_data]
clumppling = files/default_colors.txt
* = README.md